[gd_scene load_steps=14 format=3 uid="uid://crvsnss30ceu"]

[ext_resource type="Script" path="res://Lazer/Lazer_center/lazer_center.gd" id="1_yu248"]
[ext_resource type="Texture2D" uid="uid://cw8rx6ibt0jhy" path="res://Lazer/Lazer_center/Lazer_center.png" id="2_53mmr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_01seh"]
atlas = ExtResource("2_53mmr")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h77v4"]
atlas = ExtResource("2_53mmr")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vligb"]
atlas = ExtResource("2_53mmr")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pswv"]
atlas = ExtResource("2_53mmr")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4xes"]
atlas = ExtResource("2_53mmr")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_33go6"]
atlas = ExtResource("2_53mmr")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcu00"]
atlas = ExtResource("2_53mmr")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3igv"]
atlas = ExtResource("2_53mmr")
region = Rect2(0, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_pxufq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_01seh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h77v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vligb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pswv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4xes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33go6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcu00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3igv")
}],
"loop": false,
"name": &"default",
"speed": 14.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lfnyg"]
size = Vector2(44, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rhdmd"]
size = Vector2(44, 44)

[node name="lazer_center" type="StaticBody2D"]
top_level = true
collision_layer = 16384
collision_mask = 324
script = ExtResource("1_yu248")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pxufq")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lfnyg")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 257

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_rhdmd")

[node name="Area2D2" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("RectangleShape2D_rhdmd")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
